--- a/addons/adivery/plugin.cfg
+++ b/addons/adivery/plugin.cfg
@@ -3,5 +3,5 @@
 name="Adivery"
 description="پلاگین ادیوری برای موتور بازی سازی گودو"
 author="Dexter"
-version="3.422.465"
-script="adivery.gd"
+version="4.2.0"
+script="plugin.gd"
